# rag-kit

./: .gitignore  .pre-commit-config.yaml  .prototools  .release-please-manifest.json  .worktreeinclude  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST_PLAN.md  install.ps1  install.sh  justfile  pyproject.toml  ragfacile.toml  release-please-config.json
.agent/: MEMORY.md  profile.md
.agent/logs/: 2026-03-02.md
.agent/sessions/: 2026-03-02-1031-salut.md  2026-03-02-1037-peux-tu-te-souvenir-du-contexte.md
.config/: wt.toml
.github/: dependabot.yml
.github/workflows/: build-release-asset.yml  check-albert-version.yml  check-codebase.yml  check-install.yml  checks.yml  release.yml  test-install.yml
.moon/: toolchain.yml  workspace.yml
.moon/templates/albert-client/: CHANGELOG.md  pyproject.toml  template.yml
.moon/templates/albert-client/src/albert/: _async_client.py  client.py
.moon/templates/albert-client/src/albert_client/: __init__.py  client.py
.moon/templates/chainlit-chat/: README.md  app.py  chainlit.md  chainlit_fr-FR.md  modules.yml  pyproject.toml  template.yml
.moon/templates/chainlit-chat/public/: dsfr-init.js
.moon/templates/context/: README.md  pyproject.toml  template.yml
.moon/templates/context/src/context/: __init__.py
.moon/templates/ingestion/: pyproject.toml  template.yml
.moon/templates/ingestion/src/ingestion/: __init__.py  albert.py  local.py
.moon/templates/orchestration/: pyproject.toml  template.yml
.moon/templates/orchestration/src/orchestration/: basic.py
.moon/templates/pdf-context/: template.yml
.moon/templates/pdf-context/src/pdf_context/: __init__.py
.moon/templates/pipelines/: pyproject.toml
.moon/templates/pipelines/src/pipelines/: __init__.py  albert.py
.moon/templates/rag-config/: template.yml
.moon/templates/rag-core/: README.md  pyproject.toml
.moon/templates/rag-core/presets/: accurate.toml  balanced.toml  fast.toml  hr.toml  legal.toml
.moon/templates/rag-core/src/rag_core/: __init__.py  loader.py  schema.py
.moon/templates/reflex-chat/: README.md  modules.yml  moon.yml  pyproject.toml  template.yml
.moon/templates/reflex-chat/[project_name | replace(from='-', to='_')]/: [project_name | replace(from='-', to='_')].py  state.py
.moon/templates/reflex-chat/[project_name | replace(from='-', to='_')]/components/: chat.py  navbar.py
.moon/templates/reflex-chat/app/: state.py
.moon/templates/reflex-chat/app/components/: chat.py  navbar.py
.moon/templates/reflex-chat/assets/: dsfr-theme.css
.moon/templates/reranking/: README.md  pyproject.toml  template.yml
.moon/templates/reranking/src/reranking/: __init__.py  albert.py
.moon/templates/retrieval/: README.md  pyproject.toml
.moon/templates/retrieval-albert/: template.yml
.moon/templates/retrieval-albert/src/retrieval_albert/: __init__.py  _types.py  formatter.py  parser.py  retriever.py
.moon/templates/retrieval-basic/: pyproject.toml
.moon/templates/storage/: README.md  pyproject.toml
.moon/templates/sys-config/: .prototools  justfile  pyproject.toml  template.yml
.moon/templates/sys-config/.moon/: toolchain.yml  workspace.yml
apps/chainlit-chat/: .env.example  CHANGELOG.md  README.md  app.py  context_loader.py  justfile  moon.yml  pyproject.toml
apps/chainlit-chat/.chainlit/: config.toml
apps/chainlit-chat/public/: dsfr-theme.css  theme.json
apps/cli/: CHANGELOG.md  README.md  moon.yml  pyproject.toml
apps/cli/src/cli/: main.py
apps/cli/src/cli/commands/: __init__.py  collections.py  eval.py  generate.py  generate_dataset.py  init.py  setup.py  traces.py  uninstall.py  upgrade.py
apps/cli/src/cli/commands/chat/: __init__.py  agent.py  init.py  memory.py  skills.py  tools.py
apps/cli/src/cli/commands/collections/: __init__.py
apps/cli/src/cli/commands/config/: __init__.py  preset.py  set_value.py  show.py  validate.py
apps/cli/src/cli/commands/eval/: __init__.py  generate.py  search.py  sources.py
apps/cli/src/cli/commands/eval/providers/: __init__.py  albert.py  document_preprocessor.py  letta.py
apps/cli/src/cli/commands/learn/: __init__.py  _console.py  agent.py  init.py  memory.py  skills.py  tools.py
apps/cli/src/cli/commands/providers/: albert.py  document_preprocessor.py  letta.py  schema.py
apps/cli/src/cli/skills/explain-rag/: SKILL.md
apps/cli/src/cli/skills/explore-codebase/: SKILL.md
apps/cli/src/cli/skills/learn-retrieval/: SKILL.md
apps/cli/src/cli/skills/rag-cli/: SKILL.md
apps/cli/src/cli/skills/skill-creator/: SKILL.md
apps/cli/src/cli/skills/tune-pipeline/: SKILL.md
apps/cli/src/cli/templates/: ragfacile.toml
apps/cli/tests/: test_chat.py  test_chat_init.py  test_chat_memory.py  test_chat_skills.py  test_chat_tools.py  test_collections.py  test_document_preprocessor.py  test_eval_generate.py  test_generate.py  test_generate_dataset.py  test_init.py  test_learn.py  test_learn_init.py  test_learn_memory.py  test_learn_skills.py  test_learn_tools.py  test_run_rag_facile.py  test_setup.py  test_traces.py  test_uninstall.py  test_update_config.py  test_upgrade.py
apps/rag-eval/: .env.example  README.md  moon.yml  pyproject.toml
apps/rag-eval/src/rag_eval/: __init__.py  main.py
apps/rag-eval/src/rag_eval/commands/: __init__.py  search.py  sources.py
apps/reflex-chat/: CHANGELOG.md  README.md  context_loader.py  justfile  modules.yml  pyproject.toml
apps/reflex-chat/reflex_chat/: state.py
apps/reflex-chat/reflex_chat/components/: chat.py  navbar.py
data/: .gitignore
data/documents/raw/: Hub-France-IA-Les-risques-de-lIA-Generative.txt
docs/: README.md  evaluation.md
docs/guides/: ci-cd-linux.md  ci-cd-macos.md  ci-cd-windows.md  config-guide.md  developer-setup-windows.md  evaluation.md  getting-started.md  rag-pipeline.md  supabase-setup.md  uninstalling.md  windows-setup.md  worktrees.md
docs/reference/: components.md  rag-science.md  ragfacile-toml.md
supabase/: config.toml
supabase/migrations/: 00000000000000_tracing.sql  00000000000001_chainlit.sql
tools/: build_release_asset.py  generate_templates.py  moon.yml
(+25 files in other folders)
