[project]
name = "chainlit-chat"
version = "0.20.0" # x-release-please-version
description = "Chainlit Chat with OpenAI Functions Streaming"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "chainlit>=1.3.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    # workspace packages
    "albert-client",
    "pipelines",
    "rag-core",
]

[project.scripts]
chainlit-chat = "chainlit.cli:run"

[tool.setuptools]
py-modules = ["app"]

[tool.uv.sources]
albert-client = { workspace = true }
pipelines = { workspace = true }
rag-core = { workspace = true }
