[project]
name = "rag-facile-cli"
version = "0.1.0"
description = "RAG Facile CLI - Generate RAG workspaces for French Government"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "libcst>=1.8.6",
    "pyyaml>=6.0.2",
    "questionary>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
rf = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.hatch.build.targets.wheel.force-include]
"../../.moon/templates" = "cli/templates"
