[project]
name = "reflex-chat"
version = "0.8.0" # x-release-please-version
description = "Reflex Chat Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albert",
    "config",
    "full-context",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "reflex>=0.7.11",
]

[project.scripts]
reflex-chat = "reflex.reflex:cli"

[tool.setuptools.packages.find]
include = ["reflex_chat*"]

[tool.setuptools]
py-modules = ["context_loader"]

[tool.uv.sources]
albert = { workspace = true }
config = { workspace = true }
full-context = { workspace = true }
