[project]
name = "reflex-chat"
version = "1.0.0" # x-release-please-version
description = "Reflex Chat Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albert-client",
    "orchestration",
    "rag-core",
    "python-dotenv>=1.0.0",
    "reflex>=0.7.11",
]

[project.scripts]
reflex-chat = "reflex.reflex:cli"

[tool.setuptools.packages.find]
include = ["reflex_chat*"]

[tool.uv.sources]
albert-client = { workspace = true }
orchestration = { workspace = true }
rag-core = { workspace = true }
