[project]
name = "{{ project_name }}"
version = "0.8.0" # x-release-please-version
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albert",
    "chainlit>=1.3.0",
    "config",
    "full-context",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
chainlit-chat = "chainlit.cli:run"

[tool.setuptools]
py-modules = ["app", "context_loader"]

[tool.uv.sources]
albert = { workspace = true }
config = { workspace = true }
full-context = { workspace = true }

[tool.uv]
package = true
