[project]
name = "{{ project_name }}"
version = "0.17.0" # x-release-please-version
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rag-facile-lib",
    "chainlit>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
chainlit-chat = "rag-facile-lib",
    "chainlit.cli:run"

[tool.setuptools]
py-modules = ["app"]

[tool.uv.sources]
rag-facile-lib = { git = "https://github.com/etalab-ia/rag-facile.git", {{ rag_facile_ref_key }} = "{{ rag_facile_ref_value }}", subdirectory = "packages/rag-facile-lib" }

[tool.uv]
package = true
