[project]
name = "{{ project_name }}"
version = "0.15.0" # x-release-please-version
description = "{{ description }}"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "rag-facile-lib",
    "reflex>=0.7.11",
]

[project.scripts]
reflex-chat = "rag-facile-lib",
    "reflex.reflex:cli"

[tool.setuptools.packages.find]
include = ["{{ project_name | replace(from='-', to='_') }}*"]

[tool.uv.sources]
rag-facile-lib = { git = "https://github.com/etalab-ia/rag-facile.git", {{ rag_facile_ref_key }} = "{{ rag_facile_ref_value }}", subdirectory = "packages/rag-facile-lib" }

[tool.uv]
package = true
