[project]
name = "retrieval-basic"
version = "0.10.0" # x-release-please-version
description = "Basic retrieval components - PDF text extraction and context formatting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_basic"]
